[gd_scene load_steps=13 format=3 uid="uid://d0aadsv0uaoyf"]

[ext_resource type="Script" uid="uid://8inuq8qijvff" path="res://Scripts/UI/GameMenus/start_menu.gd" id="1_x858q"]
[ext_resource type="Texture2D" uid="uid://d1bef2u8knxo3" path="res://Assets/Background/titlescreen.png" id="2_n5ja1"]
[ext_resource type="FontFile" uid="uid://p47ydk5quyq2" path="res://Assets/Tutorial Open Assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="3_x858q"]
[ext_resource type="PackedScene" uid="uid://brc3fv7pjl1bv" path="res://Scenes/UI/GameMenus/Options_Menu.tscn" id="4_4yw8f"]
[ext_resource type="AudioStream" uid="uid://bipnhi5kx3r28" path="res://Assets/Audio/Music/SoulShephard.wav" id="5_md32f"]
[ext_resource type="Texture2D" uid="uid://kq5hfqfgie2u" path="res://Assets/logo/Transparent logo 2.png" id="6_3tla5"]
[ext_resource type="Texture2D" uid="uid://bt6mdc6kg0ylv" path="res://Assets/Background/overcome_death2.png" id="6_n5ja1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kko6a"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("2_n5ja1")
modulate_color = Color(0.65012825, 0.6501283, 0.65012825, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kex2f"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
corner_detail = 6
shadow_size = 3
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kko6a"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.4045111, 0.40451115, 0.4045111, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 6
shadow_size = 3
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x858q"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.8217887, 0.8217887, 0.8217885, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 6
shadow_size = 3
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3tla5"]
texture = ExtResource("6_n5ja1")

[node name="StartMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x858q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kko6a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -20.0
offset_right = 134.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Continue")
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x858q")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kex2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kko6a")
theme_override_styles/hover = SubResource("StyleBoxFlat_x858q")
theme_override_styles/focus = SubResource("StyleBoxFlat_x858q")
text = "Start Game"

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Options")
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x858q")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kex2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kko6a")
theme_override_styles/hover = SubResource("StyleBoxFlat_x858q")
theme_override_styles/focus = SubResource("StyleBoxFlat_x858q")
text = "Continue"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../Exit")
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x858q")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kex2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kko6a")
theme_override_styles/hover = SubResource("StyleBoxFlat_x858q")
theme_override_styles/focus = SubResource("StyleBoxFlat_x858q")
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Start")
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x858q")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_kex2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kko6a")
theme_override_styles/hover = SubResource("StyleBoxFlat_x858q")
theme_override_styles/focus = SubResource("StyleBoxFlat_x858q")
text = "Exit
"

[node name="OptionsMenu" parent="." instance=ExtResource("4_4yw8f")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_md32f")
autoplay = true
bus = &"Music"

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 3.0
offset_right = 871.0
offset_bottom = 277.0
texture = ExtResource("6_3tla5")
expand_mode = 1

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3tla5")

[node name="GameStartTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="focus_entered" from="VBoxContainer/Start" to="." method="_on_any_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Continue" to="." method="_on_any_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Options" to="." method="_on_any_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Exit" to="." method="_on_any_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_game_start_timer_timeout"]
